# MHPC-P2.8-project

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
.github/workflows/: cmake.yml
LJMD_serial/: CMakeLists.txt  README.md  README_cmake.md
LJMD_serial/examples/: CMakeLists.txt
LJMD_serial/include/: constants.h  prototypes.h  utilities.h
LJMD_serial/src/: constants.c  energy.c  force.c  tests.cpp  utilities.c  verlet.c
LJMD_serial/tests/: check_argon2916.sh  test.  test.x  test_constants.cpp  test_energy.cpp
Obj-serial/: CMakeLists.txt
Report/: README.md  bench.ipynb
examples/: CMakeLists.txt  argon_108.xyz
include/: constants.h  prototypes.h  structures.h  utilities.h
src/: energy.c  force.c  input.c  main.c  output.c  utilities.c  verlet.c
tests/: CMakeLists.txt  check_argon.sh  check_argon108.sh  check_argon2916.sh  test_energy.cpp  test_force.cpp  test_input.cpp  test_main.cpp  test_output.cpp  test_velverlet.cpp
tests copy/: check_argon108.sh  test_main.cpp  test_utilities.cpp
